package com.libmanagementsys.vestas_proj.model;

import jakarta.persistence.*;
import java.time.LocalDate;

@Entity
@Table(name = "transactions")
public class Transaction {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "transaction_id")
    private Long transactionId;

    @ManyToOne
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(nullable = false)
    private LocalDate requestDate;

    @Column(nullable = false)
    private LocalDate dueDate;

    protected Transaction() {
    }

    public Transaction(User user, LocalDate requesDate, LocalDate dueDate) {
        this.user = user;
        this.requestDate = requesDate;
        this.dueDate = dueDate;
    }

    public Long getTransactionId() {
        return this.transactionId;
    }

    public User getUser() {
        return this.user;
    }

    public void setUser(User user) {
        this.user = user;
    }

    public LocalDate getRequestDate() {
        return this.requestDate;
    }

    public void setRequestDate(LocalDate requesDate) {
        this.requestDate = requesDate;
    }

    public LocalDate getDueDate() {
        return this.dueDate;
    }

    public void setDueDate(LocalDate dueDate) {
        this.dueDate = dueDate;
    }

}
